@@ -1,3 +1,11 @@
+1999-09-17  Eric Melski  <ericm@scriptics.com
+
+	* mainframe.tcl: Modified menu creation/setmenustate functions to support
+	a new model of menustate.  Instead of enabling/disabling a menu item 
+	whenever any one of its tags changes state, now it only enables menu items
+	if all of its tags are set.  This makes it really easy to, say, only enable
+	the "New Action" entry if both a project is open and an element is selected.
+
 1999-09-16  Eric Melski  <ericm@scriptics.com>
 
 	* notebook.tcl: Added some (non-functional) code for doing
